// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-dIZGdw fsOTvL"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE lijqbI"
        style={
          Object {
            "color": "#90A4AE",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with a label should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  <label
    className="Label-bxMjsr iZhmvb"
    htmlFor="dropdown"
  >
     
    Text label
     
  </label>
  <div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-dIZGdw fsOTvL"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE lijqbI"
        style={
          Object {
            "color": "#90A4AE",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  with an error message should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-dIZGdw fsOTvL"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE lijqbI"
        style={
          Object {
            "color": "#90A4AE",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  <div
    className="ErrorMessage-eJhZpN bzMSZo"
  >
    Error message
  </div>
</div>
`;

exports[`Input component  with items should match the snapshot 1`] = `
<div
  className="FieldGroup-iFQzIc dToppz"
>
  
  <div>
    <button
      aria-expanded={false}
      aria-haspopup={true}
      aria-label="open menu"
      className="Dropdown__DropdownButton-dIZGdw fsOTvL"
      data-toggle={true}
      name="Dropdown"
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      type="button"
    >
      Selecione
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 Dropdown__ArrowDown-laZZPE lijqbI"
        style={
          Object {
            "color": "#90A4AE",
          }
        }
      >
        arrow_drop_down
      </span>
    </button>
  </div>
  
</div>
`;
